VZ Experience Added

--- a/index.html
+++ b/index.html
@@ -316,28 +316,37 @@
                         <h3 class="resume-title">Professional Experience</h3>
                         <div class="resume-item">
                             <h4>Graphic Designer</h4>
-                            <h5>Jun 2022 - Oct 2022</h5>
+                            <h5>April 2022</h5>
+                            <p><em>Volume Zero</em></p>
+                            <ul>
+                                <li>"At Volume Zero, I was a multi-skilled visual media professional, responsible for designing visual content, editing videos, capturing high-quality images, and creating engaging reels. I collaborated effectively with the creative team, managed multiple projects simultaneously, and delivered projects on time and within budget. My versatile skill set helped the company effectively communicate its brand message to the target audience and enhance its brand identity."</li>
+
+                            </ul>
+                        </div>
+                        <div class="resume-item">
+                            <h4>Graphic Designer</h4>
+                            <h5>Jun 2021 - March 2022</h5>
                             <p><em>Practical Lights</em></p>
                             <ul>
-                                <li>Worked as a Graphic designer, Video Editor, Photographer</li>
+                                <li>"Worked as a Graphic designer, Video Editor, Photographer"</li>
 
                             </ul>
                         </div>
                         <div class="resume-item">
                             <h4>Graphic Designer and Degital Marketer</h4>
-                            <h5>Jan 2022 - Jun 2022</h5>
+                            <h5>Jan 2021 - Jun 2021</h5>
                             <p><em>Seeds IVF Center, Nashik, Maharashtra</em></p>
                             <ul>
-                                <li>Worked as a Graphic designer, Video Editor, Photographer, Photo Editor and Digital
-                                    Marketer</li>
+                                <li>"Worked as a Graphic designer, Video Editor, Photographer, Photo Editor and Digital
+                                    Marketer"</li>
                             </ul>
                         </div>
                         <div class="resume-item">
                             <h4>Backend Executive</h4>
-                            <h5>Jan 2020 - Jan 2022</h5>
+                            <h5>Jan 2019 - Jan 2021</h5>
                             <p><em>Astute Corporate Services, Nashik, Maharashtra</em></p>
                             <ul>
-                                <li>Worked as a Digital Marketer, Backend Executive and Teliphonic Officer</li>
+                                <li>"Worked as a Digital Marketer, Backend Executive and Teliphonic Officer"</li>
                             </ul>
                         </div>
                     </div>
