--- a/index.html
+++ b/index.html
@@ -59,7 +59,10 @@
                     <li><a href="#contact" class="nav-link scrollto"><i class="bx bx-envelope"></i>
                             <span>Contact</span></a>
                     </li>
-                    <li><a href="Resume.pdf" target="_blank" class="nav-link scrollto"><i class="bx bx-file-blank"></i>
+                    <!-- <li><a href="Resume.pdf" target="_blank" class="nav-link scrollto"><i class="bx bx-file-blank"></i>
+                            <span>Resume PDF</span></a>
+                    </li> -->
+                    <li><a href="https://www.canva.com/design/DAFfIJ0hIq0/Bsw5m9JvCAw2OQr4gttvPw/view?utm_content=DAFfIJ0hIq0&utm_campaign=designshare&utm_medium=link&utm_source=publishsharelink" target="_blank" class="nav-link scrollto"><i class="bx bx-file-blank"></i>
                             <span>Resume PDF</span></a>
                     </li>
                 </ul>
