--- a/index.html
+++ b/index.html
@@ -62,6 +62,9 @@
                     <li><a href="Resume.pdf" target="_blank" class="nav-link scrollto"><i class="bx bx-file-blank"></i>
                             <span>Resume PDF</span></a>
                     </li>
+                    <li><a href="Resume.pdf" target="_blank" class="nav-link scrollto"><i class="bx bx-file-blank"></i>
+                            <span>Omkar</span></a>
+                    </li>
                     <!-- <li><a href="https://www.canva.com/design/DAFfIJ0hIq0/v7TOk4UqB9Q3dUBhFb45hg/edit?utm_content=DAFfIJ0hIq0&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton" target="_blank" class="nav-link scrollto"><i class="bx bx-file-blank"></i> -->
                             <span>Resume PDF</span></a>
                     </li>
