New Experience Added

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                             <span>Contact</span></a>
                     </li>
                     <li><a href="Resume.pdf" target="_blank" class="nav-link scrollto"><i class="bx bx-file-blank"></i>
-                            <span>Resume PDF</span></a> 
+                            <span>Resume PDF</span></a>
                     </li>
                     <!-- Kiran's resume -->
                     <!-- <li><a href="https://www.canva.com/design/DAFfIJ0hIq0/v7TOk4UqB9Q3dUBhFb45hg/edit?utm_content=DAFfIJ0hIq0&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton" target="_blank" class="nav-link scrollto"><i class="bx bx-file-blank"></i> 
@@ -320,11 +320,33 @@
                     <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
                         <h3 class="resume-title">Professional Experience</h3>
                         <div class="resume-item">
+                            <h4>Graphic Designer & Video Editor</h4>
+                            <h5>April 2023</h5>
+                            <p><em>ONTV NEWS & Transit Media Broadcaster</em></p>
+                            <ul>
+                                <li>Served as a team leader and multi-skilled visual media professional.</li>
+                                <li>Designed visual content and edited videos.</li>
+                                <li>Captured high-quality images and created engaging reels.</li>
+                                <li>Collaborated effectively with the creative team on various projects.</li>
+                                <li>Managed multiple projects simultaneously, ensuring timely delivery and adherence to
+                                    budget.</li>
+                                <li>Utilized proficiency in Photoshop, Illustrator, Premiere Pro, and After Effects.
+                                </li>
+                                <li>Enhanced brand identity and communication to the target audience.</li>
+                            </ul>
+                        </div>
+
+                        <div class="resume-item">
                             <h4>Graphic Designer</h4>
-                            <h5>April 2022</h5>
+                            <h5>April 2022 - April 2023</h5>
                             <p><em>Volume Zero</em></p>
                             <ul>
-                                <li>"At Volume Zero, I was a multi-skilled visual media professional, responsible for designing visual content, editing videos, capturing high-quality images, and creating engaging reels. I collaborated effectively with the creative team, managed multiple projects simultaneously, and delivered projects on time and within budget. My versatile skill set helped the company effectively communicate its brand message to the target audience and enhance its brand identity."</li>
+                                <li>"At Volume Zero, I was a multi-skilled visual media professional, responsible for
+                                    designing visual content, editing videos, capturing high-quality images, and
+                                    creating engaging reels. I collaborated effectively with the creative team, managed
+                                    multiple projects simultaneously, and delivered projects on time and within budget.
+                                    My versatile skill set helped the company effectively communicate its brand message
+                                    to the target audience and enhance its brand identity."</li>
 
                             </ul>
                         </div>
@@ -564,13 +586,14 @@
             </div>
             <div class="clickTo">
                 <p>
-                    <div class="col-lg-12 d-flex justify-content-center">
-                        <ul id="portfolio-flters ">
-                            <!-- <li data-filter="*" class="filter-active">All</li> -->
-                            <li data-filter="*" class="filter-click">Click on the <i class="bi bi-plus-lg"></i> icon to Open.</li>
-                            <!-- <li data-filter=".filter-card">Lights Project</li> -->
-                        </ul>
-                    </div>
+                <div class="col-lg-12 d-flex justify-content-center">
+                    <ul id="portfolio-flters ">
+                        <!-- <li data-filter="*" class="filter-active">All</li> -->
+                        <li data-filter="*" class="filter-click">Click on the <i class="bi bi-plus-lg"></i> icon to
+                            Open.</li>
+                        <!-- <li data-filter=".filter-card">Lights Project</li> -->
+                    </ul>
+                </div>
                 </p>
             </div>
             <div class="row portfolio-container lightsProject" data-aos="fade-up" data-aos-delay="100">
@@ -834,7 +857,7 @@
                 </div>
             </div>
         </section>
-        
+
     </main>
     <!-- <footer id="footer">
         <div class="container">
@@ -859,16 +882,16 @@
     <script>if (window.self == window.top) { window.dataLayer = window.dataLayer || []; function gtag() { dataLayer.push(arguments); } gtag('js', new Date()); gtag('config', 'G-P7JSYB1CSP'); }</script>
 
     <!--Start of Tawk.to Script-->
-<script type="text/javascript">
-    var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
-    (function(){
-    var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
-    s1.async=true;
-    s1.src='https://embed.tawk.to/641bc2144247f20fefe77a49/1gs66s8q9';
-    s1.charset='UTF-8';
-    s1.setAttribute('crossorigin','*');
-    s0.parentNode.insertBefore(s1,s0);
-    })();
+    <script type="text/javascript">
+        var Tawk_API = Tawk_API || {}, Tawk_LoadStart = new Date();
+        (function () {
+            var s1 = document.createElement("script"), s0 = document.getElementsByTagName("script")[0];
+            s1.async = true;
+            s1.src = 'https://embed.tawk.to/641bc2144247f20fefe77a49/1gs66s8q9';
+            s1.charset = 'UTF-8';
+            s1.setAttribute('crossorigin', '*');
+            s0.parentNode.insertBefore(s1, s0);
+        })();
     </script>
     <!--End of Tawk.to Script-->
 </body>
