--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 <body> <i class="bi bi-list mobile-nav-toggle d-xl-none"></i>
     <header id="header">
         <div class="d-flex flex-column">
-            <div class="profile"> <img src="images/img-profile-img.jpg" alt="" class="img-fluid rounded-circle">
+            <div class="profile"> <img src="images/img-profile-img.jpeg" alt="" class="img-fluid rounded-circle">
                 <h1 class="text-light"><a href="index.html">Kiran Nagane</a></h1>
                 <div class="social-links mt-3 text-center">
                     <a href="https://twitter.com/kiran_nagane?t=dFjmkXWUr430cz5nb7ZCrQ&s=08" target="_blank"
@@ -92,7 +92,7 @@
                         each assignment.</p>
                 </div>
                 <div class="row">
-                    <div class="col-lg-4" data-aos="fade-right"> <img src="images/img-profile-img.jpg" class="img-fluid"
+                    <div class="col-lg-4" data-aos="fade-right"> <img src="images/img-profile-img.jpeg" class="img-fluid"
                             alt=""></div>
                     <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
                         <h3>Graphic Designer.</h3>
