--- a/index.html
+++ b/index.html
@@ -342,7 +342,7 @@
                         <h3 class="resume-title">Education</h3>
                         <div class="resume-item">
                             <h4>PDP in 3D Animation</h4>
-                            <h5>2019 - 2022</h5>
+                            <h5>2018 - 2022</h5>
                             <p><em>Zee Institute of Creative Arts, Nashik, Maharashtra</em></p>
                             <p>
                                 <!-- Quia nobis sequi est occaecati aut. Repudiandae et iusto quae reiciendis et quis Eius vel
@@ -447,7 +447,7 @@
 
                         <div class="resume-item">
                             <h4>Graphic Designer & Video Editor</h4>
-                            <h5>April 2023</h5>
+                            <h5>April 2023 -  Present</h5>
                             <p>
                                 <em>ONTV NEWS & Transit Media Broadcaster</em>
                                 <!-- Instagram icon linking to ONTV's Instagram profile -->
