Update 1st before leaving Thebrandsigma.

--- a/index.html
+++ b/index.html
@@ -446,10 +446,34 @@
                         <h3 class="resume-title">Professional Experience</h3>
 
                         <div class="resume-item">
-                            <h4>Graphic Designer & Video Editor</h4>
-                            <h5>April 2023 -  Present</h5>
+                            <h4>Art Director</h4>
+                            <h5>November 2024 - Present</h5>
                             <p>
-                                <em>ONTV NEWS & Transit Media Broadcaster</em>
+                                <em>The Brand Sigma</em>
+                                <!-- Instagram icon linking to Volume Zero's Instagram profile -->
+                                <a href="https://www.instagram.com/thebrandsigma/" target="_blank">
+                                    <i class="fab fa-instagram"></i>
+                                </a>
+                            </p>
+                            <ul>
+                                <li>Led the creative direction and brand storytelling across campaigns, advertising, and
+                                    digital platforms</li>
+                                <li>Managed a multidisciplinary design and video team to deliver impactful projects.
+                                </li>
+                                <li>Developed innovative concepts that aligned with Sigma’s premium identity.</li>
+                                <li>Drove ideas from concept to execution across OOH, print, digital, and film.</li>
+                                <li>Ensured every project reflected Sigma’s brand values and visual identity.</li>
+                                <li>Created engaging visuals that connected with audiences and strengthened brand
+                                    presence.</li>
+                            </ul>
+                        </div>
+
+
+                        <div class="resume-item">
+                            <h4>Graphic Designer & Video Editor</h4>
+                            <h5>April 2023 - October 2024 </h5>
+                            <p>
+                                <em>Digitec Engineers & Computech Pvt. Ltd.</em>
                                 <!-- Instagram icon linking to ONTV's Instagram profile -->
                                 <a href="https://www.instagram.com/ontvtransitmedia?igsh=MXEwNXcxa3Fhcm50cw=="
                                     target="_blank">
@@ -735,8 +759,22 @@
 
                 </div>
             </div>
-            <div class="gap">
+            <div class="moreGraphicsContainer">
+                <div class="mg-container">
+                    <h3>Want to see more?</h3>
+                    <p>
+                        We’ve shared only a few highlights above.
+                        Click below to explore the complete collection of newly created graphics.
+                    </p>
+                    <a class="mg-button" href="https://drive.google.com/drive/folders/1WGxLpFbcj2HOpri0yDt8Cg0EnciB6KGx"
+                        target="_blank" rel="noopener noreferrer">
+                        <span class="mg-icon">📂</span>
+                        <span class="mg-text">More Graphics</span>
+                    </a>
+                </div>
 
+            </div>
+            <div class="gap">
             </div>
             <div class="row" data-aos="fade-up">
                 <div class="col-lg-12 d-flex justify-content-center">
