Update 2st before leaving Thebrandsigma.

--- a/index.html
+++ b/index.html
@@ -124,8 +124,8 @@
                                             kirannagane1220@gmail.com
                                         </span>
                                     </li>
-                                    <li><i class="bi bi-chevron-right"></i> <strong>Freelance:</strong>
-                                        <span>Available</span>
+                                    <li><i class="bi bi-chevron-right"></i> <strong>Experience:</strong>
+                                        <span>5 years</span>
                                     </li>
                                 </ul>
                             </div>
