Update 3rd before leaving Thebrandsigma.

--- a/index.html
+++ b/index.html
@@ -763,7 +763,7 @@
                 <div class="mg-container">
                     <h3>Want to see more?</h3>
                     <p>
-                        We’ve shared only a few highlights above.
+                        I’ve shared only a few highlights above.
                         Click below to explore the complete collection of newly created graphics.
                     </p>
                     <a class="mg-button" href="https://drive.google.com/drive/folders/1WGxLpFbcj2HOpri0yDt8Cg0EnciB6KGx"
