Update 4th before leaving Thebrandsigma.

--- a/index.html
+++ b/index.html
@@ -84,12 +84,7 @@
             <div class="container">
                 <div class="section-title">
                     <h2>About</h2>
-                    <p>I'm a creative graphic designer with original concepts and a distinctive visual style. more than
-                        two years of experience creating designs for advertising, videos, websites, and print media.
-                        solid knowledge of marketing concepts and advertising strategies. Excellent attention to detail
-                        and a gift for producing eye-catching designs. Team player who is dedicated to producing
-                        excellent results on schedule and within budget. dedication to ensuring client satisfaction on
-                        each assignment.</p>
+                    <p>I'm a creative graphic designer with original concepts and a distinctive visual style. more than 5 years of experience creating designs for advertising, videos, websites, and print media. solid knowledge of marketing concepts and advertising strategies. Excellent attention to detail and a gift for producing eye-catching designs. Team player who is dedicated to producing excellent results on schedule and within budget. dedication to ensuring client satisfaction on each assignment.</p>
                 </div>
                 <div class="row">
                     <div class="col-lg-4" data-aos="fade-right"> <img src="images/img-profile-img.jpeg"
