--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                     <div class="col-lg-4" data-aos="fade-right"> <img src="images/img-profile-img.jpeg"
                             class="img-fluid" alt=""></div>
                     <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
-                        <h3>Graphic Designer.</h3>
+                        <h3>Art Director.</h3>
                         <p class="fst-italic"> I was born in Maharashtra, India.</p>
                         <div class="row">
                             <div class="col-lg-6">
@@ -108,7 +108,7 @@
                             </div>
                             <div class="col-lg-6">
                                 <ul>
-                                    <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>22</span></li>
+                                    <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>25</span></li>
                                     <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong>
                                         <span>Graduate</span>
                                     </li>
