--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                             class="img-fluid" alt=""></div>
                     <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
                         <h3>Art Director.</h3>
-                        <p class="fst-italic"> I was born in Maharashtra, India.</p>
+                        <p class="fst-italic"> I born in Maharashtra, India.</p>
                         <div class="row">
                             <div class="col-lg-6">
                                 <ul>
