Update 7th before leaving Thebrandsigma.

--- a/index.html
+++ b/index.html
@@ -764,7 +764,7 @@
                     <a class="mg-button" href="https://drive.google.com/drive/folders/1WGxLpFbcj2HOpri0yDt8Cg0EnciB6KGx"
                         target="_blank" rel="noopener noreferrer">
                         <span class="mg-icon">📂</span>
-                        <span class="mg-text">More Graphics</span>
+                        <span class="mg-text">More Graphics & Videos</span>
                     </a>
                 </div>
 
